// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpeedDial renders speedDial with variant prop variant is flat 1`] = `
<View
  style={
    [
      {
        "right": "7%",
      },
      {
        "alignSelf": "flex-end",
      },
      {
        "bottom": "5%",
        "position": "absolute",
        "width": 40,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 50,
            "flexDirection": "row",
            "height": 50,
            "position": "absolute",
            "width": 50,
          },
          [
            {
              "opacity": 0,
              "transform": [
                {
                  "translateY": -0,
                },
              ],
            },
            {
              "bottom": 20,
            },
          ],
          {
            "backgroundColor": "#82B98E",
          },
        ]
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 50,
            "height": "100%",
            "justifyContent": "center",
            "opacity": 1,
            "width": "100%",
          }
        }
        testID="children_item_0"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 25,
              },
              undefined,
              {
                "fontFamily": "anticon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderRadius": 50,
            "flexDirection": "row",
            "height": 50,
            "position": "absolute",
            "width": 50,
          },
          [
            {
              "opacity": 0,
              "transform": [
                {
                  "translateY": -0,
                },
              ],
            },
            {
              "bottom": 20,
            },
          ],
          {
            "backgroundColor": "#82B98E",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "fontSize": 12,
              "fontWeight": "500",
              "paddingHorizontal": 12,
              "paddingVertical": 5,
              "position": "absolute",
              "right": 60,
              "textAlign": "center",
              "top": 10,
            },
            {
              "backgroundColor": "white",
              "borderRadius": 5,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#82B98E",
                "fontSize": undefined,
                "lineHeight": undefined,
              },
            ]
          }
        >
          ads
        </Text>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 50,
            "height": "100%",
            "justifyContent": "center",
            "opacity": 1,
            "width": "100%",
          }
        }
        testID="children_item_1"
      />
    </View>
    <View
      style={
        [
          {
            "borderRadius": 50,
            "flexDirection": "row",
            "height": 50,
            "position": "absolute",
            "width": 50,
          },
          [
            {
              "opacity": 0,
              "transform": [
                {
                  "translateY": -0,
                },
              ],
            },
            {
              "bottom": 20,
            },
          ],
          {
            "backgroundColor": "#82B98E",
          },
        ]
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 50,
            "height": "100%",
            "justifyContent": "center",
            "opacity": 1,
            "width": "100%",
          }
        }
        testID="children_item_2"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 25,
              },
              undefined,
              {
                "fontFamily": "anticon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        [
          null,
          {
            "borderRadius": 50,
            "height": 60,
            "width": 60,
          },
          {
            "backgroundColor": undefined,
          },
        ]
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 50,
            "height": "100%",
            "justifyContent": "center",
            "opacity": 1,
            "width": "100%",
          }
        }
        testID="base_item"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": undefined,
                "fontSize": 20,
              },
              undefined,
              {
                "fontFamily": "anticon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`SpeedDial renders speedDial with variant prop variant is spread 1`] = `
<View
  style={
    [
      {
        "right": "7%",
      },
      {
        "alignSelf": "flex-end",
      },
      {
        "bottom": "5%",
        "position": "absolute",
        "width": 40,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 50,
            "flexDirection": "row",
            "height": 50,
            "position": "absolute",
            "width": 50,
          },
          {
            "opacity": 0,
            "transform": [
              {
                "translateX": -0,
              },
            ],
          },
          {
            "backgroundColor": "#82B98E",
          },
        ]
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 50,
            "height": "100%",
            "justifyContent": "center",
            "opacity": 1,
            "width": "100%",
          }
        }
        testID="children_item_0"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 25,
              },
              undefined,
              {
                "fontFamily": "anticon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderRadius": 50,
            "flexDirection": "row",
            "height": 50,
            "position": "absolute",
            "width": 50,
          },
          {
            "opacity": 0,
            "transform": [
              {
                "translateX": -0,
              },
              {
                "translateY": -0,
              },
            ],
          },
          {
            "backgroundColor": "#82B98E",
          },
        ]
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 50,
            "height": "100%",
            "justifyContent": "center",
            "opacity": 1,
            "width": "100%",
          }
        }
        testID="children_item_1"
      />
    </View>
    <View
      style={
        [
          {
            "borderRadius": 50,
            "flexDirection": "row",
            "height": 50,
            "position": "absolute",
            "width": 50,
          },
          {
            "opacity": 0,
            "transform": [
              {
                "translateY": -0,
              },
            ],
          },
          {
            "backgroundColor": "#82B98E",
          },
        ]
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 50,
            "height": "100%",
            "justifyContent": "center",
            "opacity": 1,
            "width": "100%",
          }
        }
        testID="children_item_2"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 25,
              },
              undefined,
              {
                "fontFamily": "anticon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        [
          null,
          {
            "borderRadius": 50,
            "height": 60,
            "width": 60,
          },
          {
            "backgroundColor": undefined,
          },
        ]
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 50,
            "height": "100%",
            "justifyContent": "center",
            "opacity": 1,
            "width": "100%",
          }
        }
        testID="base_item"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 25,
              },
              undefined,
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰅖
        </Text>
      </View>
    </View>
  </View>
</View>
`;
